update PlatController && regenerate openapi.yaml
